--- a/sass/themes/mobile/lib/module/_list.scss
+++ b/sass/themes/mobile/lib/module/_list.scss
@@ -21,3 +21,19 @@
 @import "list/voucher";
 
 
+.ui_list {
+    > li {
+        > a {
+            > .img {
+                position: relative;
+                overflow: hidden;
+
+                img {
+                    max-width: none;
+                    max-height: none;
+                    @include position-center;
+                }
+            }
+        }
+    }
+}
