--- a/sass/themes/pc/page/restaurant/detail/_main.scss
+++ b/sass/themes/pc/page/restaurant/detail/_main.scss
@@ -55,6 +55,9 @@
 
                         // _dishes.scss
                         @import "main/_dishes";
+
+                        // _menu.scss
+                        @import "main/_menu";
                     }
                     // ui_block end
                 }
