--- a/sass/themes/pc/page/restaurant/detail/main/_dishes.scss
+++ b/sass/themes/pc/page/restaurant/detail/main/_dishes.scss
@@ -1,11 +1,11 @@
 //sass style
 //-----------------------------------
-// _layout.scss
+// _dishes.scss
 
 
 
 /**************************************/
-/*                layout              */
+/*                dishes              */
 /**************************************/
 
 // dishes
