--- a/sass/themes/pc/layout/header/_banner.scss
+++ b/sass/themes/pc/layout/header/_banner.scss
@@ -34,6 +34,15 @@
 
                 > a {
                     display: block;
+
+                    > .img {
+                        width: 100%;
+                        img {
+                            width: 100%;
+                            max-width: none;
+                            max-height: none;
+                        }
+                    }
                 }
             }
         }
