--- a/sass/themes/pc/lib/module/list/post/_img.scss
+++ b/sass/themes/pc/lib/module/list/post/_img.scss
@@ -17,14 +17,14 @@
             > .img {
                 position: relative;
                 @include remCalc("height", 161);
-                @include remCalc("border-radius", 5.5 5.5 0 0);
+                // @include remCalc("border-radius", 2.7 2.7 0 0);
 
                 // max-screen
                 @include max-screen($base-max-screen){}
                 // max-screen end
 
                 > img {
-                    @include remCalc("border-radius", 5.5 5.5 0 0);
+                    // @include remCalc("border-radius", 2.7 2.7 0 0);
                 }
             }
             // img end
