--- a/sass/themes/pc/lib/module/list/shop/_img.scss
+++ b/sass/themes/pc/lib/module/list/shop/_img.scss
@@ -32,10 +32,10 @@
 
                     &.lazyloaded {}
 
-                    &:hover {
-                        transition: all .7s;
-                        transform: scale(1.05);
-                    }
+                    // &:hover {
+                    //     transition: all .7s;
+                    //     transform: scale(1.05);
+                    // }
                 }
             }
             // img end
